syntax = "proto3";

option go_package = "github.com/bd878/gallery/server/search/internal/machine";

message AppendMessageCommand {
	int64   id = 1;
	int64   user_id = 2;
	string  text = 3;
	string  name = 4;
	bool    private = 5;
	string  title = 6;
}

message UpdateMessageCommand {
	int64   id = 1;
	int64   user_id = 2;
	string  text = 3;
	string  name = 4;
	string  title = 5;
}

message DeleteMessageCommand {
	int64   id = 1;
	int64   user_id = 2;
}

message PublishMessagesCommand {
	repeated int64   ids = 1;
	int64   user_id = 2;
}

message PrivateMessagesCommand {
	repeated int64 ids = 1;
	int64   user_id = 2;
}

message AppendThreadCommand {
	int64  id = 1;
	int64  user_id = 2;
	int64  parent_id = 3;
	string name = 4;
	string description = 5;
	bool   private = 6;
}

message UpdateThreadCommand {
	int64  id = 1;
	int64  user_id = 2;
	string name = 3;
	string description = 4;
}

message DeleteThreadCommand {
	int64  id = 1;
	int64  user_id = 2;
}

message ChangeThreadParentCommand {
	int64  id = 1;
	int64  user_id = 2;
	int64  parent_id = 3;
}

message PublishThreadCommand {
	int64  id = 1;
	int64  user_id = 2;
}

message PrivateThreadCommand {
	int64  id = 1;
	int64  user_id = 2;
}

message AppendFileCommand {
	int64     id = 1;
	int64     user_id = 2;
	string    name = 3;
	string    description = 4;
	int64     size = 5;
	string    mime = 6;
	bool      private = 7;
}

message DeleteFileCommand {
	int64     id = 1;
	int64     user_id = 2;
}

message PublishFileCommand {
	int64     id = 1;
	int64     user_id = 2;
}

message PrivateFileCommand {
	int64     id = 1;
	int64     user_id = 2;
}

message AppendTranslationCommand {
	int64     message_id = 1;
	int64     user_id = 2;
	string    lang = 3;
	string    title = 4;
	string    text = 5;
}

message DeleteTranslationCommand {
	int64     message_id = 1;
	string    lang = 2;
}

message UpdateTranslationCommand {
	int64     message_id = 1;
	string    lang = 2;
	optional string title = 3;
	optional string text = 4;
}
